page-serv: filter by name/description
